<resources>
    <string name="app_name">WeatherNow</string>
    <string name="can_t_load">Cannot load</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>


    <string name="n">North</string>
    <string name="nne">North-NorthEast</string>
    <string name="ne">North East</string>
    <string name="ene">East-NorthEast</string>
    <string name="e">East</string>
    <string name="ese">East-SouthEast</string>
    <string name="se">SouthEast</string>
    <string name="sse">South-SouthEast</string>
    <string name="s">South</string>
    <string name="ssw">South-SouthWest</string>
    <string name="sw">SouthWest</string>
    <string name="wsw">West-SouthWest</string>
    <string name="w">West</string>
    <string name="wnw">West-NorthWest</string>
    <string name="nw">NorthWest</string>
    <string name="nnw">North-NorthWest</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>


    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="forecast">Forecast:</string>
    <string name="map">Map</string>
    <string name="setting">Setting</string>
    <string name="rate">Rate</string>
    <string name="other">other</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="contact_us">Contact us</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_city">Search city</string>
    <string name="not_found">Not found:(</string>
    <string name="search_by_gps">Search by GPS</string>
    <string name="feels_like">Fells like:\u0020</string>
    <string name="select_color_of_widget">Select color of Widget:</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>


    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">General Setting</string>

    <string name="unit_title">Select Unit</string>

    <string name="current_widget_color">Current weather</string>

    <string name="ok">OK</string>
    <string name="air_quality">Air Quality:\u0020</string>
    <string name="refresh">Refresh</string>
    <string name="co">CO</string>
    <string name="no">NO</string>
    <string name="no2">NO2</string>
    <string name="o3">O3</string>
    <string name="so2">SO2</string>
    <string name="pm2_5">PM2.5</string>
    <string name="pm10">PM10</string>
    <string name="nh3">NH3</string>
    <string name="search">Search</string>
    <string name="temp">Temp</string>
    <string name="error_occurred">Error occurred</string>
    <string name="meter_p_second">\u0020meter/s</string>
    <string name="miles_p_hour">\u0020miles/h</string>
    <string name="network_error">Network error</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="sound_effects">Sound effects</string>
    <string name="last_update">Last update:\u0020</string>
    <string name="just_now">Just now</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="min">minute</string>
    <string name="mins">Minutes</string>
    <string name="sec">Second</string>
    <string name="secs">Seconds</string>
    <string name="ago">ago</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="moderate">Moderate</string>
    <string name="poor">Poor</string>
    <string name="very_poor">Very poor</string>
    <string name="unknown">Unknown</string>
    <string name="widgets_color">Widgets color</string>
    <string name="forecast_weather">Forecast weather</string>

</resources>