<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Setting"
        app:title="@string/messages_header">

        <ListPreference
            app:defaultValue="metric"
            app:entries="@array/unit_entries"
            app:entryValues="@array/unit_values"
            app:key="unit"
            app:title="@string/unit_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="audio"
            app:title="@string/sound_effects" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/widgets_color">

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/current_widget_color_entries"
            app:entryValues="@array/current_widget_color_values"
            app:key="current_widget_color"
            app:title="@string/current_widget_color"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/forecast_widget_color_entries"
            app:entryValues="@array/forecast_widget_color_values"
            app:key="forecast_widget_color"
            app:title="@string/forecast_weather"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>