<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".widgets.WidgetConfigActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_color_of_widget"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <RadioGroup
        android:id="@+id/widget_color_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/widget_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/light"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/widget_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:textColor="@color/black" />
    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="widgetConfirmBtn"
        android:text="OK" />
</LinearLayout>